--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-login></app-login>
-<app-home-index></app-home-index>
+<app-menu></app-menu>
+
+<div class="container-fluid">
+    <app-login></app-login>
+</div>
