--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,3 +1,39 @@
-<p>
-  Página de login do bet-help.
-</p>
+<div class="row ">
+  <div class="col s12 m4 offset-m4 xl4 offset-xl4">
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title">Bet help</span>
+        <span class="sub-title">Iniciar sessão</span>
+
+        <!-->Form login</!-->
+        <div class="row margin-top-15">
+          <form class="col s12">
+            <div class="row">
+              <div class="input-field col s12">
+                <i class="material-icons md-24 prefix ">person</i>
+                <input id="icon_prefix" type="text" name="txtEmail" class="validate" 
+                      [ngModel]="usuario.email" >
+                <label for="icon_prefix">Digite seu e-mail</label>
+              </div>
+              <div class="input-field col s12">
+                <i class="material-icons md-24 prefix">lock</i>
+                <input id="icon_telephone" type="password" name="txtSenha"  class="validate" 
+                      [(ngModel)]="usuario.senha">
+                <label for="icon_telephone">Digite sua senha</label>
+              </div>
+            </div>
+          </form>
+        </div>
+
+      </div>
+      <div class="card-action">
+        <div class="row" style="margin-bottom:0px">
+          <div class="col s12">
+            <a class="waves-effect waves-light btn blue darken-2 right"
+            (click)="submit()">Acessar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
