--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -4,7 +4,6 @@
       <div class="card-content">
         <span class="card-title">Bet help</span>
         <span class="sub-title">Iniciar sessão</span>
-
         <!-->Form login</!-->
         <div class="row margin-top-15">
           <form class="col s12">
@@ -12,7 +11,7 @@
               <div class="input-field col s12">
                 <i class="material-icons md-24 prefix ">person</i>
                 <input id="icon_prefix" type="text" name="txtEmail" class="validate" 
-                      [ngModel]="usuario.email" >
+                      [(ngModel)]="usuario.email" >
                 <label for="icon_prefix">Digite seu e-mail</label>
               </div>
               <div class="input-field col s12">
