--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -4,21 +4,20 @@
       <div class="card-content">
         <span class="card-title">Bet help</span>
         <span class="sub-title">Iniciar sessão</span>
-        <!-->Form login</!-->
         <div class="row margin-top-15">
-          <form class="col s12">
+          <form class="col s12" [formGroup]="FormLogin" novalidate>
             <div class="row">
               <div class="input-field col s12">
                 <i class="material-icons md-24 prefix ">person</i>
-                <input id="icon_prefix" type="text" name="txtEmail" class="validate" 
-                      [(ngModel)]="usuario.email" >
+                <input id="icon_prefix" type="text" class="validate" formControlName="email" />
                 <label for="icon_prefix">Digite seu e-mail</label>
+                <control-messages [control]="FormLogin.controls.email"></control-messages>
               </div>
               <div class="input-field col s12">
                 <i class="material-icons md-24 prefix">lock</i>
-                <input id="icon_telephone" type="password" name="txtSenha"  class="validate" 
-                      [(ngModel)]="usuario.senha">
+                <input id="icon_telephone" type="password" class="validate" formControlName="password" />
                 <label for="icon_telephone">Digite sua senha</label>
+                <control-messages [control]="FormLogin.controls.password"></control-messages>
               </div>
             </div>
           </form>
@@ -28,11 +27,13 @@
       <div class="card-action">
         <div class="row" style="margin-bottom:0px">
           <div class="col s12">
-            <a class="waves-effect waves-light btn blue darken-2 right"
-            (click)="submit()">Acessar</a>
+            <button class="waves-effect waves-light btn blue darken-2 right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<p>Form value: {{ FormLogin.value | json }}</p>
+<p>Form status: {{ FormLogin.status | json }}</p>
