--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,18 @@
 }
 
 /* label focus color */
-.input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label {
+.input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label,
+.input-field input[type=email]:focus + label,  {
     color: #1976D2 !important;
 }
 /* label underline focus color */
-.input-field input[type=text]:focus, .input-field input[type=password]:focus  {
+.input-field input[type=text]:focus, .input-field input[type=password]:focus ,
+.input-field input[type=email]:focus {
     border-bottom: 1px solid #1976D2 !important;
     box-shadow: 0 1px 0 0 #1976D2 !important;
+}
+input[type=email]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label {
+     color: #1976D2 !important;
 }
 /* valid color */
 .input-field input[type=text].valid, .input-field input[type=password].valid  {
@@ -42,3 +47,25 @@
 .message-info{
       background-color: blue;
 }
+
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
+        border-bottom: 1px solid #1976D2 !important;
+    box-shadow: 0 1px 0 0 #1976D2 !important;
+}
+.input-field{    margin-bottom: 0.5rem;}
+.input-field > .material-icons { margin-top: 15px}
+input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea{
+    margin: 0;
+}
+input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime].valid, input[type=datetime]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid{
+      border-bottom: 1px solid #1976D2 !important;
+    box-shadow: 0 1px 0 0 #1976D2 !important;
+}
+.text-red{ color: red; }
+/*.input-field input[type=text].ng-invalid, .input-field input[type=password].ng-invalid{
+    border-bottom: 1px solid red !important;
+}
+
+.input-field input[type=text]:focus, .input-field input[type=password]:focus{
+border-bottom: 1px solid red !important;
+}*/
