--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-menu></app-menu>
 
 <div class="container-fluid">
-    <app-login></app-login>
+    <router-outlet></router-outlet>
+
+    <!--<app-login></app-login>-->
 </div>
