--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,12 +1,12 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Bet-help</a>
+    <a routerLink="/" class="brand-logo">Bet-help</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
+      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <!--<li><a href="badges.html">Components</a></li>
       <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
+      <li><a href="mobile.html">Mobile</a></li>-->
     </ul>
     <ul class="side-nav" id="mobile-demo">
       <li><a href="sass.html">Sass</a></li>
