--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav>
+<nav *ngIf="displayMenu" >
   <div class="nav-wrapper">
     <a routerLink="/" class="brand-logo">Bet-help</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
