--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -3,7 +3,8 @@
     <a routerLink="/" class="brand-logo">Bet-help</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
-      <li routerLinkActive="active"><a routerLink="/login">Login</a></li>
+      <!--<li routerLinkActive="active"><a routerLink="/login">Login</a></li>-->
+      <li><a (click)="logout()">Sair</a></li>
       <!--<li><a href="badges.html">Components</a></li>
       <li><a href="collapsible.html">Javascript</a></li>
       <li><a href="mobile.html">Mobile</a></li>-->
