--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="row ">
+<div class="row">
   <div class="col s12 m4 offset-m4 xl4 offset-xl4">
-    <div class="card">
+    <div class="card" id="cardLogin">
       <div class="card-content">
         <span class="card-title">Bet help</span>
         <span class="sub-title">Iniciar sessão</span>
