--- a/src/styles.css
+++ b/src/styles.css
@@ -62,6 +62,7 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
     box-shadow: 0 1px 0 0 #1976D2 !important;
 }
 .text-red{ color: red; }
+
 /*.input-field input[type=text].ng-invalid, .input-field input[type=password].ng-invalid{
     border-bottom: 1px solid red !important;
 }
@@ -69,3 +70,5 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
 .input-field input[type=text]:focus, .input-field input[type=password]:focus{
 border-bottom: 1px solid red !important;
 }*/
+body{ background-color: #e9e9e9;} 
+#cardLogin { transform: translateY(60%) }
