refactoring no httpservice

--- a/src/app/home/index/index.component.html
+++ b/src/app/home/index/index.component.html
@@ -1,1 +1,9 @@
-<h5>Seja bem vindo ao bet-help</h5>
+<div class="card">
+    <div class="card-content">
+       <h5>Bem vindo ao Bet-Help</h5>
+       <BR>
+    </div>
+    <!--<div class="card-action">
+
+    </div>-->
+</div>
