--- a/src/styles.css
+++ b/src/styles.css
@@ -71,4 +71,7 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
 border-bottom: 1px solid red !important;
 }*/
 body{ background-color: #e9e9e9;} 
-#cardLogin { transform: translateY(60%) }
+#cardLogin { transform: translateY(20%) }
+.visible-hidden { visibility: hidden;}
+.card .card-content { padding-bottom: 0px;}
+nav {background-color: #00695c;}
