--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-menu></app-menu>
 
 <div class="container-fluid">
+    <app-preloader></app-preloader>
     <router-outlet></router-outlet>
 </div>
