--- a/src/app/shared/components/preloader/preloader.component.html
+++ b/src/app/shared/components/preloader/preloader.component.html
@@ -1,3 +1,6 @@
-<p *ngIf="loading">
-  Carregando...
-</p>
+<!--<div *ngIf="loading" class="pre-loader">
+</div>-->
+
+<div *ngIf="loading" class="pre-loader-bg">
+  <div class="pre-loader"></div>
+</div>
