--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+body{ background-color: #e9e9e9;} 
+nav {background-color: #00695c;}
+
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
 .margin-top-15{ margin-top: 15px; }
+.text-red{ color: red; }
+.visible-hidden { visibility: hidden;}
+.card .card-content { padding-bottom: 0px;}
+
+#cardLogin { transform: translateY(20%) }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
     color: #039be5;
@@ -61,17 +69,28 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
       border-bottom: 1px solid #1976D2 !important;
     box-shadow: 0 1px 0 0 #1976D2 !important;
 }
-.text-red{ color: red; }
 
-/*.input-field input[type=text].ng-invalid, .input-field input[type=password].ng-invalid{
-    border-bottom: 1px solid red !important;
+.pre-loader {
+    border: 6px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 6px solid #3498db;
+    width: 55px;
+    height: 55px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+    margin: auto;
+    position: sticky;
+    vertical-align: middle;
+    top: 40%;
 }
 
-.input-field input[type=text]:focus, .input-field input[type=password]:focus{
-border-bottom: 1px solid red !important;
-}*/
-body{ background-color: #e9e9e9;} 
-#cardLogin { transform: translateY(20%) }
-.visible-hidden { visibility: hidden;}
-.card .card-content { padding-bottom: 0px;}
-nav {background-color: #00695c;}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+.pre-loader-bg{ position: fixed; z-index: 99999;  width: 100%; height: 100%; }
