--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <app-menu></app-menu>
-
 <app-preloader></app-preloader>
-<div class="container-fluid">
 
+<div id="main-app" class="container-fluid">
     <router-outlet></router-outlet>
 </div>
