--- a/src/app/area/home/index/index.component.html
+++ b/src/app/area/home/index/index.component.html
@@ -1,85 +1,14 @@
-<div class="card">
-    <div class="card-content">
-        <h5>Bem vindo ao Bet-Help</h5>
+<div class="row">
+    <div class="col s12">
 
-
-        <BR> 
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-
-        <button class="btn" (click)="teste()">click</button>
-        
+        <div class="card">
+            <div class="card-content">
+                <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
+                { name: 'Informação', icon: 'user', action: 'info' },
+                { name: 'Ver', icon: 'pipes', action: 'details' }
+                ]"></app-scoreboard>
+                <button class="btn" (click)="teste()">click</button>
+            </div>
+        </div>
     </div>
-    <!--<div class="card-action">
-
-    </div>-->
-</div>
-
-<div class="card">
-    <div class="card-content">
-        <h5>Bem vindo ao Bet-Help</h5>
-
-
-        <BR> 
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-        <p>In this tutorial we will add a CSS3 transitions to our already created CSS3 preloader. Once the content of the page
-        is loaded, we’ll animate the preloading screen away from the viewport with a nice transition. What you will learn
-        how to use CSS3 transitions how to animate out a full-screen preloader how to combine CSS3 with JavaScript for this
-        technique Open the starting files and follow the steps below.</p>
-
-        <button class="btn" (click)="teste()">click</button>
-        
-    </div>
-    <!--<div class="card-action">
-
-    </div>-->
 </div>
