--- a/src/app/area/home/login/login.component.html
+++ b/src/app/area/home/login/login.component.html
@@ -27,7 +27,7 @@
       <div class="card-action">
         <div class="row" style="margin-bottom:0px">
           <div class="col s12">
-            <button class="waves-effect waves-light btn blue darken-2 right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
+            <button class="waves-effect waves-light btn btn-flat blue darken-2 right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
           </div>
         </div>
       </div>
