add modal details

--- a/src/app/area/home/index/index.component.html
+++ b/src/app/area/home/index/index.component.html
@@ -5,7 +5,8 @@
             <div class="card-content">
                 <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
                             { name: 'Ver', icon: 'pipes', action: eventDetails }
-                ]"></app-scoreboard>
+                ]">
+                </app-scoreboard>
             </div>
         </div>
     </div>
