--- a/src/styles.css
+++ b/src/styles.css
@@ -94,3 +94,21 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
   100% { transform: rotate(360deg); }
 }
 .pre-loader-bg{ position: fixed; z-index: 99999;  width: 100%; height: 100%; }
+
+
+.mat-sidenav-backdrop{
+    background: rgba(0,0,0,.5);
+}
+
+.mat-sidenav-container{
+    position: inherit !important;
+    display: inherit !important;
+}
+.mat-sidenav-opened, .mat-sidenav{
+    background: white;
+}
+.example-sidenav {
+  padding: 20px;
+}
+
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
