--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,61 +5,14 @@
 <div id="main-app" class="container-fluid">
     <router-outlet></router-outlet>
 </div>-->
-<h1 class="header">Checkbox</h1>
-
-<h2>Default <small>inside a <code>.form-group</code></small></h2>
-<div class="form-group">
-  <div class="checkbox">
-    <label>
-      <input type="checkbox"> Notifications
-    </label>
-  </div>
-  <p class="help-block">Notify me about updates to apps or games that I've downloaded</p>
-</div>
-<div class="form-group">
-  <div class="checkbox">
-    <label>
-      <input type="checkbox" checked=""> Auto-updates
-    </label>
-  </div>
-  <p class="help-block">Auto-update apps over wifi only</p>
-</div>
-
-<h2>Horizontal form with column label variations</h2>
-<form class="form-horizontal">
-  <div class="form-group">
-    <label class="col-sm-2" for="ch1">Touch sounds</label>
-    <div class="col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input id="ch1" type="checkbox" checked="">
-        </label>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="form-group has-error label-floating">
+        <label for="f3" class="control-label">Email address has-error</label>
+        <input type="email" class="form-control" id="f3">
+        <span class="help-block">Please enter a valid email address</span>
       </div>
-      <p class="help-block">This shows the generic label variant.</p>
     </div>
   </div>
-  <div class="form-group">
-    <label class="col-sm-2 control-label" for="ch3">Vibrate on touch</label>
-    <div class="col-sm-10">
-      <div class="checkbox">
-        <label>
-          <input id="ch3" type="checkbox">
-        </label>
-      </div>
-      <p class="help-block">This shows the <code>control-label</code> variant.</p>
-    </div>
-  </div>
-</form>
-
-<h2>Default <small>outside a <code>.form-group</code></small></h2>
-<div class="checkbox">
-  <label>
-    <input type="checkbox"> Notifications
-  </label>
-</div>
-<p class="help-block">Without a <code>.form-group</code>, <code>.help-block</code> always shows</p>
-<div class="checkbox">
-  <label>
-    <input type="checkbox" checked=""> Auto-updates
-  </label>
 </div>
