--- a/src/styles.css
+++ b/src/styles.css
@@ -1,87 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 body{ background-color: #e9e9e9;} 
-nav {background-color: #00695c;}
 
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
 .margin-top-15{ margin-top: 15px; }
 .text-red{ color: red; }
-.visible-hidden { visibility: hidden;}
-.card .card-content { padding-bottom: 0px;}
 
-#cardLogin { transform: translateY(20%) }
-
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
-    color: #039be5;
-}
-.card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
-    color: #034e73;
-}
-
-/* label focus color */
-.input-field input[type=text]:focus + label, .input-field input[type=password]:focus + label,
-.input-field input[type=email]:focus + label,  {
-    color: #1976D2 !important;
-}
-/* label underline focus color */
-.input-field input[type=text]:focus, .input-field input[type=password]:focus ,
-.input-field input[type=email]:focus {
-    border-bottom: 1px solid #1976D2 !important;
-    box-shadow: 0 1px 0 0 #1976D2 !important;
-}
-input[type=email]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label {
-     color: #1976D2 !important;
-}
-/* valid color */
-.input-field input[type=text].valid, .input-field input[type=password].valid  {
-    border-bottom: 1px solid #1976D2 !important;
-    box-shadow: 0 1px 0 0 #1976D2 !important;
-}
-
-/* icon prefix focus color */
-.input-field .prefix.active {
-    color: #1976D2 !important;
-}
-
-.message-warning{
-    background-color: gray;
-}
-.message-success{
-      background-color: green;
-}
-.message-error{
-      background-color: red;
-}
-.message-info{
-      background-color: blue;
-}
-
-input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]){
-        border-bottom: 1px solid #1976D2 !important;
-    box-shadow: 0 1px 0 0 #1976D2 !important;
-}
-.input-field{    margin-bottom: 0.5rem;}
-.input-field > .material-icons { margin-top: 15px}
-input:not([type]), input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime], input[type=datetime-local], input[type=tel], input[type=number], input[type=search], textarea.materialize-textarea{
-    margin: 0;
-}
-input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, input[type=text]:focus.valid, input[type=password].valid, input[type=password]:focus.valid, input[type=email].valid, input[type=email]:focus.valid, input[type=url].valid, input[type=url]:focus.valid, input[type=time].valid, input[type=time]:focus.valid, input[type=date].valid, input[type=date]:focus.valid, input[type=datetime].valid, input[type=datetime]:focus.valid, input[type=datetime-local].valid, input[type=datetime-local]:focus.valid, input[type=tel].valid, input[type=tel]:focus.valid, input[type=number].valid, input[type=number]:focus.valid, input[type=search].valid, input[type=search]:focus.valid, textarea.materialize-textarea.valid, textarea.materialize-textarea:focus.valid{
-      border-bottom: 1px solid #1976D2 !important;
-    box-shadow: 0 1px 0 0 #1976D2 !important;
-}
+.message-warning{ background-color: gray; }
+.message-success{ background-color: green; }
+.message-error{ background-color: red; }
+.message-info{ background-color: blue; }
 
 .pre-loader {
-    border: 6px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 6px solid #3498db;
-    width: 55px;
-    height: 55px;
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-    margin: auto;
-    position: sticky;
-    vertical-align: middle;
-    top: 40%;
+    border: 6px solid #f3f3f3; border-radius: 50%; border-top: 6px solid #3498db; width: 55px; height: 55px;
+    -webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite; margin: auto; position: sticky; vertical-align: middle; top: 40%;
 }
 
 @-webkit-keyframes spin {
@@ -94,21 +26,3 @@ input:not([type]).valid, input:not([type]):focus.valid, input[type=text].valid, 
   100% { transform: rotate(360deg); }
 }
 .pre-loader-bg{ position: fixed; z-index: 99999;  width: 100%; height: 100%; }
-
-
-.mat-sidenav-backdrop{
-    background: rgba(0,0,0,.5);
-}
-
-.mat-sidenav-container{
-    position: inherit !important;
-    display: inherit !important;
-}
-.mat-sidenav-opened, .mat-sidenav{
-    background: white;
-}
-.example-sidenav {
-  padding: 20px;
-}
-
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
