--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<!--<nav *ngIf="displayMenu">
+<nav *ngIf="displayMenu">
   <div class="nav-wrapper">
     <a routerLink="/" class="brand-logo">Bet-help</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -19,4 +19,4 @@
       <li><a href="mobile.html">Mobile</a></li>
     </ul>
   </div>
-</nav>-->
+</nav>
