--- a/src/app/area/home/login/login.component.html
+++ b/src/app/area/home/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!--<div class="row">
   <div class="col s12 m4 offset-m4 xl4 offset-xl4">
     <div class="card" id="cardLogin">
       <div class="card-content">
@@ -30,6 +30,33 @@
             <button class="waves-effect waves-light btn btn-flat blue darken-2 right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+</div>-->
+
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Panel primary</h3>
+        <span class="card-title">Bet help</span>
+        <span class="sub-title">Iniciar sessão</span>
+      </div>
+      <div class="panel-body">
+        <form class="col s12" novalidate [formGroup]="FormLogin" (keydown.enter)="!FormLogin.valid ? false : submit() ">
+          <div class="form-group label-floating is-empty">
+            <label for="txtemail" class="control-label">Digite seu e-mail</label>
+            <input id="txtemail" class="form-control" type="email" formControlName="email" required />
+            <display-validation [control]="FormLogin.controls.email"></display-validation>
+          </div>
+
+          <div class="form-group label-floating is-empty">
+            <label for="txtpassword" class="control-label">Digite sua senha</label>
+            <input id="txtpassword" type="password" class="form-control" formControlName="password" minlength="4" />
+            <display-validation [control]="FormLogin.controls.password"></display-validation>
+          </div>
+        </form>
       </div>
     </div>
   </div>
