--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-body{ background-color: #e9e9e9;} 
+/*body{ background-color: #e9e9e9;} */
 
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
