--- a/src/app/area/home/login/login.component.html
+++ b/src/app/area/home/login/login.component.html
@@ -1,47 +1,10 @@
-<!--<div class="row">
-  <div class="col s12 m4 offset-m4 xl4 offset-xl4">
-    <div class="card" id="cardLogin">
-      <div class="card-content">
-        <span class="card-title">Bet help</span>
-        <span class="sub-title">Iniciar sessão</span>
-        <div class="row margin-top-15">
-          <form class="col s12" novalidate [formGroup]="FormLogin" (keydown.enter)="!FormLogin.valid ? false : submit() ">
-            <div class="row">
-              <div class="input-field col s12">
-                <i class="material-icons md-24 prefix ">person</i>
-                <input id="txtemail" type="email" class="validate" formControlName="email" required />
-                <label for="txtemail">Digite seu e-mail</label>
-                <display-validation [control]="FormLogin.controls.email"></display-validation>
-              </div>
-              <div class="input-field col s12">
-                <i class="material-icons md-24 prefix">lock</i>
-                <input id="txtpassword" type="password" class="validate" formControlName="password" minlength="2" />
-                <label for="txtpassword">Digite sua senha</label>
-                <display-validation [control]="FormLogin.controls.password"></display-validation>
-              </div>
-            </div>
-          </form>
-        </div>
-
-      </div>
-      <div class="card-action">
-        <div class="row" style="margin-bottom:0px">
-          <div class="col s12">
-            <button class="waves-effect waves-light btn btn-flat blue darken-2 right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>-->
 
 <div class="row">
-  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-offset-3 col-lg-offset-3">
+  <div id="panel-login" class="col-xs-12 col-sm-8 col-md-4 col-lg-4 col-sm-offset-2 col-md-offset-4 col-lg-offset-4">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <h3 class="panel-title">Panel primary</h3>
-        <span class="card-title">Bet help</span>
-        <span class="sub-title">Iniciar sessão</span>
+        <h3 class="panel-title">Bet help</h3>
+        <span class="title">Iniciar sessão</span>
       </div>
       <div class="panel-body">
         <form class="col s12" novalidate [formGroup]="FormLogin" (keydown.enter)="!FormLogin.valid ? false : submit() ">
@@ -55,6 +18,12 @@
             <label for="txtpassword" class="control-label">Digite sua senha</label>
             <input id="txtpassword" type="password" class="form-control" formControlName="password" minlength="4" />
             <display-validation [control]="FormLogin.controls.password"></display-validation>
+          </div>
+
+          <div class="row" style="margin-bottom:0px">
+            <div class="col-xs-12">
+              <button class="btn btn-primary pull-right" [disabled]="!FormLogin.valid" (click)="submit()">Acessar</button>
+            </div>
           </div>
         </form>
       </div>
