--- a/src/app/areas/login/login.component.html
+++ b/src/app/areas/login/login.component.html
@@ -12,8 +12,8 @@
               <!--<i class="material-icons prefix">account_circle</i>-->
               Digite seu e-mail
             </label>
-            <input id="txtemail" class="form-control" type="email" formControlName="email" required />
-            <display-validation [control]="FormLogin.controls.email"></display-validation>
+            <input id="txtemail" class="form-control" type="email" formControlName="Email" required />
+            <display-validation [control]="FormLogin.controls.Email"></display-validation>
           </div>
 
           <div class="form-group label-floating is-empty">
@@ -21,8 +21,8 @@
               <!--<i class="material-icons prefix">vpn_key</i>-->
               Digite sua senha
             </label>
-            <input id="txtpassword" type="password" class="form-control" formControlName="password" minlength="4" />
-            <display-validation [control]="FormLogin.controls.password"></display-validation>
+            <input id="txtpassword" type="password" class="form-control" formControlName="Password" minlength="4" />
+            <display-validation [control]="FormLogin.controls.Password"></display-validation>
           </div>
 
           <div class="row" style="margin-bottom:0px">
