--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,4 +1,4 @@
-<nav *ngIf="displayMenu">
+<!--<nav *ngIf="displayMenu">
   <div class="nav-wrapper">
     <a routerLink="/" class="brand-logo">Bet-help</a>
     <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -19,4 +19,31 @@
       <li><a href="mobile.html">Mobile</a></li>
     </ul>
   </div>
-</nav>
+</nav>-->
+
+<div class="navbar navbar-default" *ngIf="displayMenu">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="javascript:void(0)">Bet-help</a>
+    </div>
+    <div class="navbar-collapse collapse navbar-responsive-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="javascript:void(0)">Active</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+          <a href="http://fezvrasta.github.io/bootstrap-material-design/bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Profile
+            <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="javascript:void(0)" (click)="logout()">Sair</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
