--- a/src/app/areas/home/index/index.component.html
+++ b/src/app/areas/home/index/index.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col s12">
-
+iasklsajdslka
         <div class="card">
             <div class="card-content">
                 <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
