--- a/src/app/areas/home/index/index.component.html
+++ b/src/app/areas/home/index/index.component.html
@@ -1,12 +1,13 @@
 <div class="row">
     <div class="col s12">
-iasklsajdslka
         <div class="card">
             <div class="card-content">
                 <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
                             { name: 'Ver', icon: 'pipes', action: eventDetails }
                 ]">
                 </app-scoreboard>
+
+                <app-home-index-details></app-home-index-details>
             </div>
         </div>
     </div>
