add modal in application

--- a/src/app/areas/home/index/index.component.html
+++ b/src/app/areas/home/index/index.component.html
@@ -7,7 +7,7 @@
                 ]">
                 </app-scoreboard>
 
-                <app-home-index-details></app-home-index-details>
+                <app-home-details></app-home-details>
             </div>
         </div>
     </div>
