--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-/*body{ background-color: #e9e9e9;} */
+body{ background-color: rgba(238, 238, 238, 0.55);} 
 
 .md-18 { font-size: 18px !important; }
 .md-24 { font-size: 24px !important; }
@@ -12,7 +12,7 @@
 .message-info{ background-color: blue; }
 .form-group .form-control { margin-bottom: 3px; }
 .pre-loader {
-    border: 6px solid #f3f3f3; border-radius: 50%; border-top: 6px solid #3498db; width: 55px; height: 55px;
+    border: 6px solid #f3f3f3; border-radius: 50%; border-top: 6px solid #009688; width: 55px; height: 55px;
     -webkit-animation: spin 2s linear infinite; animation: spin 2s linear infinite; margin: auto; position: sticky; vertical-align: middle; top: 40%;
 }
 .form-group.label-floating label.control-label, .form-group.label-placeholder label.control-label{
@@ -30,4 +30,10 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
-.pre-loader-bg{ position: fixed; z-index: 99999;  width: 100%; height: 100%; }
+.text-time { font-weight: 600; display: inline-block; vertical-align: middle; line-height: normal; }
+.scoreboard { line-height: 45px; }
+.scoreboard-button { color: black}
+.dropdown-menu>li>a { padding: 5px 15px; line-height: 25px; vertical-align: middle;}
+.dropdown-menu>li>a>i{ padding-right: 10px;}
+.dropdown-menu>li>a:hover { background-color: rgba(249, 249, 249, 0.78);}
+.pre-loader-bg{background:rgba(39, 39, 39, 0.5); position: fixed; z-index: 99999;  width: 100%; height: 100%; }
