--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,26 +1,3 @@
-<!--<nav *ngIf="displayMenu">
-  <div class="nav-wrapper">
-    <a routerLink="/" class="brand-logo">Bet-help</a>
-    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li>
-        <a class="dropdown-button" data-activates="dropdown1" data-belowOrigin="true">
-        <i class="material-icons left">account_circle</i>Profile
-        </a>
-        <ul id="dropdown1" class="dropdown-content">
-          <li><a (click)="logout()">Sair</a></li>
-        </ul>
-      </li>
-    </ul>
-    <ul class="side-nav" id="mobile-demo">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">Javascript</a></li>
-      <li><a href="mobile.html">Mobile</a></li>
-    </ul>
-  </div>
-</nav>-->
-
 <div class="navbar navbar-default" *ngIf="displayMenu">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -33,14 +10,20 @@
     </div>
     <div class="navbar-collapse collapse navbar-responsive-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="javascript:void(0)">Active</a></li>
+        <li class="active"><a href="javascript:void(0)" routerLink="/">Página inicial</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="http://fezvrasta.github.io/bootstrap-material-design/bootstrap-elements.html" data-target="#" class="dropdown-toggle" data-toggle="dropdown">Profile
+          <a href="http://fezvrasta.github.io/bootstrap-material-design/bootstrap-elements.html" data-target="#" class="dropdown-toggle"
+            data-toggle="dropdown">Profile
             <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><a href="javascript:void(0)" (click)="logout()">Sair</a></li>
+            <li>
+              <a href="javascript:void(0)" (click)="logout()">
+                <i class="material-icons md-18">forward</i>
+                Sair
+                </a>
+            </li>
           </ul>
         </li>
       </ul>
