--- a/src/app/areas/home/index/index.component.html
+++ b/src/app/areas/home/index/index.component.html
@@ -1,5 +1,6 @@
 <div class="row">
     <div class="col-xs-12 col-sm-6 col-md-6">
+        <a href="javascript:void(0)"(click)="destroy()">dispose</a>
         <div class="well infobox">
             <app-scoreboard [jogos]="listaJogos" [controlsEvent]="[
                     { name: 'Palpite', icon: 'help_outline', action: eventDetails }
