--- a/src/app/areas/home/details/details.component.html
+++ b/src/app/areas/home/details/details.component.html
@@ -3,12 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-        
+
       </div>
       <div class="modal-body">
 
         <form class="col-xs-12" novalidate [formGroup]="formJogoDetails">
-          <!--<div class="row">
+          <div class="row">
             <div class="col-xs-12">
               <div class="form-group label-floating is-empty">
                 <label for="ddlMercados" class="control-label">Escolha o mercado</label>
@@ -20,7 +20,7 @@
                 <display-validation [control]="formJogoDetails.controls.MercadoID"></display-validation>
               </div>
             </div>
-          </div>-->
+          </div>
 
           <div class="row">
             <div class="col-xs-6">
