--- a/src/app/areas/home/details/details.component.html
+++ b/src/app/areas/home/details/details.component.html
@@ -22,6 +22,8 @@
             </div>
           </div>
 
+          {{ formJogoDetails.value | json }}
+
           <div class="row">
             <div class="col-xs-6">
               <div class="form-group label-floating is-empty">
